--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Text Generator</title>
+  <title>Prompt Generator</title>
   <script>
     function generateText() {
       const selection = document.getElementById('dropdown').value;
@@ -26,7 +26,7 @@
   </script>
 </head>
 <body>
-  <h1>Text Generator</h1>
+  <h1>Prompt Generator</h1>
   <select id="dropdown">
     <option value="">Select an option</option>
     <option value="option1">Option 1</option>
