--- a/index.html
+++ b/index.html
@@ -56,14 +56,31 @@
 
       switch (articleType) {
         case 'news':
-          result = `Rewrite the following news articles in ${wordCount} words, that will pass plagiarism checks, that is well structured article with h2 h3 titles, on "${keywords}", include as much details as possible, such as names, dates, prices, numbers, places. Only need 3 or 4 H2 topics. This will be a short news story. All the details you need will be in the ${source}`;
-          break;
-        case 'informational':
-          result = `Write a concise outline (that we will next write ${wordCount} word article about the ${keywords} topic, but only write the outline right now do not write the article) that is well structured article with h2 h3 titles, include as much details as possible, such as names, dates, prices, numbers, places. Only need 3 or 4 H2 topics. This will be a short news story. All the details you need will be in the ${source}`;
-          break;
-        case 'review':
-          result = `Write a concise outline (that we will next write ${wordCount} word article about, but only write the outline right now) that is well structured article with h2 h3 titles, on "${keywords}". Include as much details as possible, such as names, dates, prices, numbers, places. Only need 3 or 4 H2 topics. This will be a short news story. All the details you need will be in the ${source}`;
-          break;
+          result = `You are now JournalistGPT, you are a master news reporter.
+First, please read through the source article, which is ${source}, ignore ${source} if it's blank
+Then, please start writing a well organized structured article with proper h2, h3, and h4 titles that is about ${keywords}.  
+
+Please follow all the inputs below in order to generate this article
+Word Count: target word count should be at least ${wordCount} words
+Article Type: ${articletype}
+Tone: ${tone}
+Point of View: ${pov}
+Details: be sure to include as much details as possible, such as ${detail}`;
+        break;
+        case 'outline':
+         result = `Please write a concise outline about the ${keywords} topic, only write the outline right now do not write the article.  Outline should be well structured article with h2 h3 h4 titles, include as much details as possible, such as ${detail}.  Additional details and facts you can use will be in the ${source}, ignore ${source} if it's blank`; 
+        break;
+        case 'article':
+          result = `You are now SEOGPT, you are a master SEO writer that writes SEO articles that will rank #1 in Google for the topic about ${keywords}
+First, please read through the outline for this article, which is ${source}, ignore ${source} if it's blank
+Then, please start writing a well organized structured article with proper h2, h3, and h4 titles that is about ${keywords}.  
+
+Please follow all the inputs below in order to generate this article
+Word Count: target word count should be at least ${wordCount} words
+Tone: ${tone}
+Point of View: ${pov}
+Details: be sure to include as much details as possible, such as ${detail}
+`;
         default:
           result = 'Please select an article type and fill in all fields';
       }
@@ -82,8 +99,8 @@
   <select name="articletype" id="articletype">
     <option>Select an option</option>
     <option value="news" selected>News</option>
-    <option value="informational">Informational</option>
-    <option value="review">Review</option>
+    <option value="outline">Outline</option>
+    <option value="article">Article</option>
   </select>
 <label for="keywords">Keywords:</label>
 <input type="text" name="keywords" id="keywords">
