--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       const articleType = document.getElementsByName('articletype')[0].value;
       const keywords = document.getElementsByName('keywords')[0].value;
       const source = document.getElementsByName('source')[0].value;
+      const tone = document.getElementsByName('tone')[0].value;
+      const pov = document.getElementsByName('pov')[0].value;
+      const detail = document.getElementsByName('detail')[0].value;
       const output = document.getElementById('output');
 
       let result = '';
