--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@ Details: be sure to include as much details as possible, such as ${detail}
 <body>
 <div class="container">
   <h1>Prompt Generator</h1>
-  
+  <p>First, copy 2 to 3 articles, combine them, and ask ChatGPT to...</p>
+    
+  <p>summarize into 10 to 15 very detailed points, including details like names, places, dates, prices, numbers, list in bullet points.</p>
+  <p>ask for "give 5 counter arguments related to this sotry"</p>
+  <p>then at the end, ask "please provide 5 FAQs about this story with answers"</p>
+    
   <label for="wordcount">Word Count:</label>
   <input type="number" name="wordcount" id="wordcount" value="300">
   
